--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -134,11 +134,11 @@
 <p><span class="badge badge-light">Prescott, AZ</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4492168002'>Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4492168002'>Job Application for Speech Language Pathologist (SLP), Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Lafayette Hill, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -206,7 +206,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/midsouthrehabservices/job/r6bb5etqkkd4k7hfgcn8zd4haw'>Full-Time | Speech-Language Pathologist | Mid South Rehab Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/midsouthrehabservices/job/r6bb5etqkkd4k7hfgcn8zd4haw'>Full-Time | Speech-Language Pathologist | Mid South Rehab Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -273,7 +273,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Woodstock, Virginia</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HappinessHouse/743999693084885-speech-language-pathologist'>Happiness House Speech Language Pathologist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HappinessHouse/743999693084885-speech-language-pathologist'>Happiness House Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -377,7 +377,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-22783'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-22783'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -393,7 +393,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://pyramid-healthcare-1.workable.com/j/67AE09A695'>Pyramid Healthcare - Jobs: Speech Language Pathologist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pyramid-healthcare-1.workable.com/j/67AE09A695'>Pyramid Healthcare - Jobs: Speech Language Pathologist - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -415,7 +415,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Garden City, NY</span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696568954-speech-therapist-st'>VIVA Pediatrics Speech Therapist ST | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VIVAPediatrics/743999696568954-speech-therapist-st'>VIVA Pediatrics Speech Therapist ST | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Carrollton, TX</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -427,7 +427,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Martinsburg, West Virginia</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/fjb9wti3xsb8qqubfo9giayu4e'>Speech Language Pathologist | CTC Careers</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/ctc/job/fjb9wti3xsb8qqubfo9giayu4e'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Douglasville, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -439,7 +439,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999695592531-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999695592531-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
